fix invisible keyboard focus

--- a/src/app/menubar/menubar.component.scss
+++ b/src/app/menubar/menubar.component.scss
@@ -3,6 +3,9 @@ header {
     border-bottom-width: 1px;
     border-bottom-style: solid;
 }
+.logo-container {
+    display: block;
+}
 .logo {
     width: 218px;
     background-image: url('https://wirlernenonline.de/wp-content/themes/wir-lernen-online/dist/assets/img/WLO-Logo-01.png');
@@ -506,8 +509,8 @@ header {
     a:focus,
     button::-moz-focus-inner {
         border: 0;
-        outline: 0;
-        outline: none;
+        // outline: 0;
+        // outline: none;
     }
     .position-relative {
         position: relative;
